Update to Shard webpage

--- a/week-01/day-03/solution-06/styles.css
+++ b/week-01/day-03/solution-06/styles.css
@@ -60,7 +60,7 @@ table, th, td{
 }
 
 body{
-    background-color: red;
-    color: yellow;
+    background-color: #ffebcd;
+    color: #4b0082;
 }
 
